<resources>
    <string name="app_name">Sunshine</string>

    <!-- activity title-->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!--menu lable-->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_location">Location</string>

    <!-- Strings related to Settings -->
    <!--  General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_key_location">location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">beijing</string>

    <string name="pref_title_units">Temprature Units</string>
    <string name="pref_key_units">pref_key_units</string>
    <string name="pref_default_units">Celsius</string>
    <string-array name="pref_entries_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_values_units">
        <item>Metric</item>
        <item>Kelvin</item>
    </string-array>

    <string name="pref_title_language">language</string>
    <string name="pref_key_language">pref_key_language</string>
    <string name="pref_default_language">en_us</string>
    <string-array name="pref_entries_language">
        <item>English</item>
        <item>简体中文</item>
    </string-array>
    <string-array name="pref_values_language">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>

    <!-- settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
